--- a/plain-ansible/files/tomcat.service
+++ b/plain-ansible/files/tomcat.service
@@ -6,6 +6,7 @@ After=network.target
 ExecStart=/opt/tomcat/bin/catalina.sh run
 ExecStop=/opt/tomcat/bin/catalina.sh stop
 PidFile=/var/run/tomcat.pid
+User=vagrant
 
 [Install]
 WantedBy=multi-user.target
