--- a/plain-ansible/Vagrantfile
+++ b/plain-ansible/Vagrantfile
@@ -18,7 +18,7 @@ Vagrant.configure(2) do |config|
   config.vm.define :ansible_demo do |t|
   end
   
-  config.vm.hostname = "ansible"
+  config.vm.hostname = "database"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
