--- a/docker-container-ansible/setup-dockerd.yml
+++ b/docker-container-ansible/setup-dockerd.yml
@@ -16,6 +16,7 @@
         - ca-certificates
         - software-properties-common
         - python-docker
+        - python-pip
 
     - name: add Docker's official GPG key
       apt_key: url="http://apt.dockerproject.org/gpg" state=present
@@ -28,3 +29,6 @@
 
     - name: add user vagrant to group docker
       user: name=vagrant groups=docker state=present
+
+    - name: install docker compose
+      pip: name=docker-compose
