--- a/docker-image-lifecycle/build-and-push-images.yml
+++ b/docker-image-lifecycle/build-and-push-images.yml
@@ -17,3 +17,4 @@
         path: "{{ playbook_dir }}/../docker-image-ansible"
         push: yes
         repository: "{{ registry_hostname }}:5000/sparsick/mysql:ansible"
+# check if image is really pushed in repository
