--- a/java-webapp/pom.xml
+++ b/java-webapp/pom.xml
@@ -14,6 +14,7 @@
         <mysql.version>5.1.36</mysql.version>
         <wicket.version>7.3.0</wicket.version>
         <jetty.version>7.6.17.v20150415</jetty.version>
+        <testcontainers.version>1.4.2</testcontainers.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -78,6 +79,19 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+            <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mysql</artifactId>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
 
