--- a/java-webapp/pom.xml
+++ b/java-webapp/pom.xml
@@ -8,13 +8,14 @@
     <packaging>war</packaging>
     
     <properties>
-        <flyway.version>4.0.3</flyway.version>
-        <spring.framework.version>4.3.1.RELEASE</spring.framework.version>
+        <flyway.version>5.2.1</flyway.version>
+        <spring.framework.version>5.1.2.RELEASE</spring.framework.version>
         <java.version>1.8</java.version>
-        <mysql.version>5.1.36</mysql.version>
-        <wicket.version>7.3.0</wicket.version>
-        <jetty.version>7.6.17.v20150415</jetty.version>
-        <testcontainers.version>1.4.2</testcontainers.version>
+        <mysql.version>8.0.13</mysql.version>
+        <wicket.version>8.2.0</wicket.version>
+        <jetty.version>8.2.0.v20160908</jetty.version>
+        <testcontainers.version>1.10.1</testcontainers.version>
+        <junit.jupiter.version>5.3.1</junit.jupiter.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -76,9 +77,27 @@
         </dependency>
      
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         
@@ -88,7 +107,7 @@
             <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
-            <dependency>
+        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>mysql</artifactId>
             <version>${testcontainers.version}</version>
